# smaroute

./: CMakeLists.txt  CheckDatabase.cc  LICENSE.txt  Makefile  README.md  config_5451.xml  config_group2.xml  config_new_speed.xml  dataStruct.h  default.par  fdsaf.cc  function_temp.cc  libpqxxtest.cc  patArc.cc  patArc.h  patArcDDR.h  patArcTransition.h  patCalculateProbaForPaths.h  patDiscretizeDomain.cc  patDiscretizeDomain.h  patDisplay.cc  patDownloadOSMFile.cc  patDownloadOSMFile.h  patGenPathFromArcTranSet.cc  patGeoBoundingBox.cc  patGpsPoint.cc  patGpsPoint.h  patMapMatching.cc  patMapMatchingRoute.cc  patMapMatchingRoute.h  patMeasurementModelV2.cc  patMonteCarlo.cc  patMultiModalPathProba.cc  patMultiModalPathProba.h  patNBParameters.cc  patNBParameters.h  patNetwork.cc  patNetworkBus.cc  patNetworkBus.h  patNetworkElements.cc  (+56 more)
src/: CMakeLists.txt  config.xml  config_5451_multi.xml  config_5451_uni.xml
src/Biogeme/: patPathSampling.h
src/DeterministicMapMatching/: patMapMatching.h  patMapMatchingNetwork.h  patMapMatchingRoute.cc  patMapMatchingRoute.h  patMapMatchingRoute.u  patMapMatchingV2.h
src/MapMatching/: CMakeLists.txt  patAccelDDR.cc  patAccelDDR.h  patAccelMeasurement.cc  patAccelMeasurementModel.cc  patAccelMeasurementModel.h  patAccelSequence.cc  patAccelSequence.h  patArcDDR.cc  patArcTransition.cc  patArcTransition.h  patBTDDR.h  patBTMeasurement.cc  patBTMeasurement.h  patBTMeasurementModel.cc  patBTMeasurementModel.h  patBTSequence.h  patComputeBoundingBox.cc  patComputeBoundingBox.h  patDDR.cc  patDDR.h  patGpsDDR.cc  patGpsPoint.cc  patGpsPoint.h  patGpsSequence.cc  patGpsSequence.h  patMapMatchingIteration.cc  patMapMatchingIteration.h  patMeasurement.h  patMeasurementDDR.cc  patMeasurementDDR.h  patMeasurementModel.cc  patMeasurementModel.h  patMeasurementModelV2.cc  patMeasurementSequence.cc  patMeasurementSequence.h  patMultiModalPathMatching.cc  patMultiModalPathProba.cc  patMultiModalPathProba.h  patObservations.cc  (+13 more)
src/Math/: CMakeLists.txt  patLogProbaToProba.cc  patMixtureNormal.cc  patRandomNumber.h  patSampleDiscreteDistribution.cc  patSampleDiscreteDistribution.h
src/MetropolisHasting/: MHAlgorithm.h  MHProposal.h  MHStateProcessor.h  MHTransition.h  MHWeight.h
src/Michel/: patComputeAngle.cc  patLinkIterator.cc  patLinkIterator.h  patLinkSubpath.cc  patLinkSubpath.h  patListSubpath.cc  patListSubpath.h  patMonteCarlo.cc  patMonteCarlo.h  patOd.u  patPath.cc  patPath.h  patPath.u  patPathGenerationAlgo.cc  patPathGenerationAlgo.h  patPathIterator.cc  patPathIterator.h  patPathListIterator.cc  patSubpath.h
src/Models/: patDDR.h  patMeasurementModel.cc  patMeasurementModel.u  patMeasurementModelV1.h  patMeasurementModelV2.h  patMeasurementModelV2.u  patPathDDR.cc  patTrafficModel.u  patTrafficModelComplex.cc  patTrafficModelComplex.u  patTrafficModelMM.cc  patTrafficModelTriangular.h
src/Multimodal/: patMultiModalPathProba.cc
src/NetworkHandler/: CMakeLists.txt  patArc.cc  patArc.h  patArcSequence.cc  patArcSequence.h  patCompressedArc.cc  patCompressedArc.h  patGeoBoundingBox.cc  patGeoBoundingBox.h  patGeoBoundingBox.u  patGetShortestPathFromDB.cc  patGetShortestPathFromDB.h  patHyperNetwork.cc  patKMLPathWriter.cc  patKMLPathWriter.h  patMultiModalPath (original).cc  patMultiModalPath (original).h  patMultiModalPath.cc  patMultiModalPath.h  patNetwork.cc  patNetwork.h  patNetworkBase.cc  patNetworkBase.h  patNetworkBike.cc  patNetworkBike.h  patNetworkBus.h  patNetworkCar.cc  patNetworkCar.h  patNetworkCompresser.cc  patNetworkCompressor.h  patNetworkElements.cc  patNetworkElements.h  patNetworkEnvironment.cc  patNetworkEnvironment.h  patNetworkMetro.cc  patNetworkMetro.h  patNetworkPublicTransport.cc  patNetworkPublicTransport.h  patNetworkTrain.cc  patNetworkTrain.h  (+31 more)
src/Objects/: patSample.cc
src/PathGeneration/: patPathGenerator.h
src/RouteChoice/: CMakeLists.txt  patAnalyzeChoiceSet.cc  patAnalyzeChoiceSet.h  patChoiceSet.cc  patChoiceSet.h  patComputePathSize.cc  patComputePathSize.h  patExperimentBed.cc  patExperimentBed.h  patGetPathProbasFromObservations.cc  patGetPathProbasFromObservations.h  patObservation.cc  patObservation.h  patPathSetSimilarity.cc  patReadChoiceSetFromKML.cc  patReadChoiceSetFromKML.h  patReadObservationFromKML.cc  patReadPathsFromKML.cc  patReadPathsFromKML.h  patSampleChoiceSetForObservations.cc  patSampleChoiceSetForObservations.h  patSampleChoiceSetWithObservations.cc  patSampleChoiceSetWithObservations.h  patSampleChoiceSetWithRandomWalk.cc  patSampleChoiceSetWithRandomWalk.h  patSamplingCorrection.cc  patSamplingCorrection.h  patSimulateProbabilisticObs.cc  patSimulateProbabilisticObs.h  patSimulateProbabilisticPaths.cc  patSimulateProbabilisticPaths.h  patSimulation.cc  patSimulation.h  patUtilityFunction.cc  patUtilityFunction.h  patVerifyingSamplingResult.cc  patVerifyingSamplingResult.h  patWriteBiogemeData.cc  patWriteBiogemeData.h
src/Router/: CMakeLists.txt  patAbstractCost.cc  patAbstractCost.h  patLinkAndPathCost.cc  patLinkAndPathCost.h  patLinkCostExcludingNodes.cc  patLinkCostExcludingNodes.h  patNetworkReducer.cc  patNetworkReducer.h  patPathSizeComputer.cc  patPathSizeComputer.h  patRouter.cc  patRouter.h  patShortestPathGeneral.cc  patShortestPathTreeGeneral.cc  patShortestPathTreeGeneral.h
src/ShortestPath/: CMakeLists.txt  patLinkCost.cc  patLinkCost.h  patLinkCostExcludingNodes.cc  patLinkCostExcludingNodes.h  patNetworkReducer.cc  patNetworkReducer.h  patRouter.cc  patRouter.h  patShortestPathGeneral.cc  patShortestPathTreeGeneral.cc  patShortestPathTreeGeneral.h
src/UniModal/: patArcTransition.cc  patCalculateProbaForPaths.cc  patGpsPoint copy.cc  patNetwork.u  patObservation.cc  patObservation.h  patPathDevelop.cc  patPathJ.cc  patPathJ.h  patPathProbaAlgoV2.cc  patPathSampling.h  patReadPathFromKML.cc  patReadPathFromKML.h  patSample.cc  patSample.h  patShortestPath.h  patShortestPathTreeDest.h  patShortestPathTreeRange.h  patTraveler.cc  patTraveler.h  patTravelerSet.cc  patTrip.cc  patTrip.h  patTripGraph.cc  patTripParser.cc  patTripParser.h  (+5 more)
(+466 files in other folders)
